添加linux启动脚本
git-svn-id: http://192.168.130.17/svn/gls-rene/branches/gls-rene_V1.0.0@11 a0756dae-8928-436b-ac1e-4e4e4b99b49a